<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tmt.sistemapermisos.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/codigo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:maxLines="1"
            android:text="@string/codigo"
            android:textSize="25sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nro_boleta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nro_boleta"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/fecha_permiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_permiso"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/hora_salida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hora_salida"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/motivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/motivo"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
